# docmake

./: .dockerignore  .env-example  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: cmake_run.yml  docker.yml  examples.yml  installation.yml
docker/: entrypoint
examples/maximal/: CMakeLists.txt  markdownlint.yml  maximal_slides.md
examples/maximal/images/: down_cast.tex
examples/maximal/latex/: slides_settings.tex
examples/maximal/latex/meta/: script.md
examples/minimal/: CMakeLists.txt  example_minimal_slides.md  minimal_script.md
installation/: CMakeLists.txt  docmake-config.cmake.in
modules/docmake/: drawio.cmake  gpp.cmake  gpp.sh  helpers.cmake  latex.cmake  markdownlint.cmake  pandoc.cmake
samples/: CMakeLists.txt
samples/maximal/: CMakeLists.txt  maximal_example.cmake  maximal_script.md
samples/maximal/code/src/: main.cpp
samples/maximal/latex/meta/: slides.md
samples/minimal/: CMakeLists.txt
